data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_549.wast
;; 10. **Test Description**: Construct a loop with a `typeidx` block type referring to a function that never breaks out of the loop when targeted by a `br_table` instruction.    **Constraint Checked**: Correct referencing and evaluation of function types within block types and handling of `br_table` instructions.    **Relation to Infinite Loops**: Ensures proper type referencing and `br_table` index handling to prevent perpetual looping scenarios.

(assert_invalid
  (module
    (type $funcType (func))
    (func $loopWithTypeIndex (loop (type $funcType) (br_table 0 (i32.const 1))))
  )
  "type mismatch"
)